# rlp

./: .ghci  .gitignore  CHANGELOG.md  Makefile_happysrcs  README.md  README.org  cabal.project.local  cabal.project.local~  find-build.cl  find-build.clj  meson.build  programming-language-checklist  rlp.cabal  rlpc.drawio  rlpc.prof  rlpc.tix
app/: CoreDriver.hs  Main.hs  RlpDriver.hs  Server.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.2/: package.cache  rlp-0.1.0.0-inplace.conf
doc/: state-transition-rules.md
doc/src/: conf.py  glossary.rst  index.rst
doc/src/commentary/: gm.rst  layout-lexing.rst  type-inference.rst
doc/src/references/: gm-state-transitions.rst  rlp-grammar.rst  rlp-inference-rules.rst  ti-state-transitions.rst
docs/: Makefile
docs/src/: conf.py  glossary.rst  index.rst
docs/src/commentary/: gm.rst  layout-lexing.rst  parser.rst  stg.rst  ti.rst
docs/src/references/: gm-state-transition-rules.rst  gm-state-transitions.rst  ti-state-transitions.rst
examples/: constDivZero.hs  factorial.cr  factorial.hs  sumList.hs
examples/Core/: constDivZero.cr  factorial.cr  sumList.cr
examples/rlp/: Help.rl  MapList.rl  QuickSort.rl  SumList.rl
rlp/: Core.java  RLPC.java
src/: Core.hs  Core2Core.hs  GM.hs  Misc.hs  RLPC.java  Rlp2Core.hs  TI.hs  TIM.hs
src/Compiler/: JustRun.hs  RLPC.hs  RlpcError.hs  Types.hs
src/Control/: DFA.hs  Parser.hs
src/Control/Monad/: Errorful.hs  Utils.hs
src/Core/: CoreLex.hs  CoreParse.hs  Examples.hs  HindleyMilner.hs  Lex.hs  Lex.x  Parse.hs  Parse.y  Rename.hs  Syntax.hs  SystemF.hs  TH.hs  Utils.hs
src/Core/Parse/: Types.hs
src/Data/: Heap.hs  Pretty.hs
src/GM/: Print.hs  Types.hs  Visual.hs
src/Misc/: CofreeF.hs  Lift1.hs
src/RLP/: ParseDecls.hs  Syntax.hs
src/RLP/Parse/: Decls.hs  Types.hs
src/Rlp/: AltParse.y  AltSyntax.hs  HindleyMilner.hs  HindleyMilner2.hs  Lex.x  Lex.x.old  Lex.x.orig  Parse.y  Syntax.hs  TH.hs
src/Rlp/HindleyMilner/: Types.hs  Visual.hs
src/Rlp/Parse/: Associate.hs  Decls.hs  Types.hs  Utils.hs
src/Rlp/Syntax/: Backstage.hs  Good.hs  Types.hs
tst/: Arith.hs  CoreSyntax.hs  GMSpec.hs  Main.hs
tst/Compiler/: TypesSpec.hs
tst/Core/: HindleyMilnerSpec.hs  ParseSpec.hs
tst/Rlp/: HindleyMilnerSpec.hs
visualisers/hmvis/: .gitignore  package-lock.json  package.json  shadow-cljs.edn
visualisers/hmvis/public/: index.html
visualisers/hmvis/public/css/: main.css  solarized.css
visualisers/hmvis/src/: main.cljs
visualisers/hmvis/src/hmvis/: annotated.cljs  ppr.cljs
