cabal-version:      3.0
name:               rlp
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
-- license-file:       LICENSE
author:             crumbtoo
maintainer:         crumb@disroot.org
-- copyright:
category:           Language
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:

common warnings
--    ghc-options: -Wall -Wno-incomplete-uni-patterns -Wno-unused-top-binds

library
    import:           warnings
    exposed-modules:  Core
                    , TI
                    , GM
                    , Compiler.RLPC
                    , Compiler.RlpcError
                    , Compiler.JustRun
                    , Core.Syntax
                    , Core.Examples
                    , Core.Utils
                    , Core.TH
                    , Core.HindleyMilner
                    , Control.Monad.Errorful
                    , Rlp.Syntax
                    , Rlp.Parse.Decls
                    , Rlp.Parse.Types

    other-modules:    Data.Heap
                    , Data.Pretty
                    , Core.Parse
                    , Core.Lex
                    , Core2Core
                    , Control.Monad.Utils

    build-tool-depends: happy:happy, alex:alex

    -- other-extensions:
    build-depends:    base ^>=4.18.0.0
                    -- required for happy
                    , array
                    , data-default-class
                    , unordered-containers
                    , hashable
                    , pretty
                    -- TODO: either learn recursion-schemes, or stop depending
                    -- on it.
                    , recursion-schemes
                    , megaparsec                ^>=9.6.0
                    , text
                    , data-fix

    hs-source-dirs:   src
    default-language: GHC2021

executable rlpc
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends: base ^>=4.18.0.0
                 , rlp
                 , optparse-applicative >= 0.18.1 && < 0.19
                 , microlens >= 0.4.13 && < 0.5
                 , microlens-mtl >= 0.2.0 && < 0.3
                 , mtl >= 2.3.1 && < 2.4
                 , unordered-containers >= 0.2.20 && < 0.3
                 , text >= 2.0.2 && < 2.1

    hs-source-dirs:   app
    default-language: GHC2021

test-suite rlp-test
    import:           warnings
    default-language: GHC2021
    -- import: deps, test-deps
    type: exitcode-stdio-1.0
    hs-source-dirs: tst
    main-is: Main.hs
    build-depends: base ^>=4.18.0.0
                 , rlp
                 , QuickCheck
                 , hspec            ==2.*
                 , microlens
    other-modules: Arith
                 , GMSpec
                 , Core.HindleyMilnerSpec
    build-tool-depends: hspec-discover:hspec-discover

