cabal-version:      3.0
name:               rlp
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-2.0-only
-- license-file:       LICENSE
author:             crumbtoo
maintainer:         crumb@disroot.org
copyright:          Madeleine Sydney Ślaga
category:           Language
build-type:         Simple
extra-doc-files:    README.md
-- extra-source-files:
tested-with:        GHC==9.6.2

common warnings
--    ghc-options: -Wall -Wno-incomplete-uni-patterns -Wno-unused-top-binds

library
    import:           warnings
    exposed-modules:  Core
                    , TI
                    , GM
                    , Compiler.RLPC
                    , Compiler.RlpcError
                    , Compiler.JustRun
                    , Core.Syntax
                    , Core.Examples
                    , Core.Utils
                    , Core.TH
                    , Core.HindleyMilner
                    , Control.Monad.Errorful
                    , Rlp.Syntax
                    , Rlp.AltSyntax
                    , Rlp.AltParse
                    , Rlp.HindleyMilner
                    , Rlp.Syntax.Backstage
                    , Rlp.Syntax.Types
                    -- , Rlp.Parse.Decls
                    , Rlp.Parse
                    , Rlp.Parse.Associate
                    , Rlp.Lex
                    , Rlp.Parse.Types
                    , Rlp.TH
                    , Compiler.Types
                    , Data.Heap
                    , Data.Pretty
                    , Core.Parse
                    , Core.Parse.Types
                    , Core.Lex
                    , Core2Core
                    , Rlp2Core
                    , Control.Monad.Utils
                    , Misc
                    , Misc.Lift1
                    , Core.SystemF

    build-tool-depends: happy:happy, alex:alex

    -- other-extensions:
    build-depends:    base >=4.17 && <4.20
                    -- required for happy
                    , array >= 0.5.5 && < 0.6
                    , containers >= 0.6.7 && < 0.7
                    , template-haskell >= 2.20.0 && < 2.21
                    , pretty >= 1.1.3 && < 1.2
                    , data-default >= 0.7.1 && < 0.8
                    , data-default-class >= 0.1.2 && < 0.2
                    , hashable >= 1.4.3 && < 1.5
                    , mtl >= 2.3.1 && < 2.4
                    , text >= 2.0.2 && < 2.2
                    , unordered-containers >= 0.2.20 && < 0.3
                    , recursion-schemes >= 5.2.2 && < 5.3
                    , data-fix >= 0.3.2 && < 0.4
                    , utf8-string >= 1.0.2 && < 1.1
                    , extra >= 1.7.0 && <2
                    , semigroupoids >=6.0 && <6.1
                    , comonad >=5.0.0 && <6
                    , lens >=5.2.3 && <6.0
                    , text-ansi >=0.2.0 && <0.4
                    , effectful-core ^>=2.3.0.0
                    , deriving-compat ^>=0.6.0
                    , these >=0.2 && <2.0
                    , free >=5.2
                    , bifunctors >=5.2

    hs-source-dirs:   src
    default-language: GHC2021

    default-extensions:
        OverloadedStrings
        TypeFamilies
        LambdaCase
        ViewPatterns
        DataKinds
        DerivingVia
        StandaloneDeriving
        DerivingStrategies
        BlockArguments

executable rlpc
    import:           warnings
    main-is:          Main.hs
    other-modules:    RlpDriver
                    , CoreDriver

    build-depends: base >=4.17.0.0 && <4.20.0.0
                 , rlp
                 , optparse-applicative >= 0.18.1 && < 0.19
                 , mtl >= 2.3.1 && < 2.4
                 , unordered-containers >= 0.2.20 && < 0.3
                 , lens >=5.2.3 && <6.0
                 , text >= 2.0.2 && < 2.2

    hs-source-dirs:   app
    default-language: GHC2021

test-suite rlp-test
    import:           warnings
    default-language: GHC2021
    -- import: deps, test-deps
    type: exitcode-stdio-1.0
    hs-source-dirs: tst
    main-is: Main.hs
    build-depends: base ^>=4.18.0.0
                 , rlp
                 , QuickCheck
                 , hspec            ==2.*
                 , microlens
                 , lens >=5.2.3 && <6.0
    other-modules: Arith
                 , GMSpec
                 , Core.HindleyMilnerSpec
                 , Compiler.TypesSpec
    build-tool-depends: hspec-discover:hspec-discover

